--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,20 @@
 {
-    "manifest_version": 3,
-    "name": "Trackly extension",
-    "description": "A Chrome extension for finding tracklists",
-    "version": "1.0.0",
-    "action": {
-        "default_popup": "index.html"
-    },
-    "background": {
-        "service_worker": "background.js"
-    },
-    "content_scripts": [
-        {
-            "matches": ["<all_urls>"],
-            "js": ["contentScript.js"]
-        }
-    ]
+  "manifest_version": 3,
+  "name": "Trackly extension",
+  "description": "A Chrome extension for finding tracklists",
+  "version": "1.0.0",
+  "action": {
+    "default_popup": "index.html"
+  },
+  "host_permissions": ["<all_urls>"],
+  "permissions": ["tabs", "scripting", "activeTab"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
+    }
+  ]
 }
