--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "dotenv-webpack": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
