--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@eslint/js": "^9.31.0",
     "@types/chrome": "^0.0.326",
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.0",
+    "eslint": "^9.31.0",
     "html-webpack-plugin": "^5.6.3",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
